--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { BrowserRouter as Router, Switch, Route } from "react-router-dom";
 import { Form } from "@jobber/components/Form";
 import { InputNumber } from "@jobber/components/InputNumber";
@@ -13,6 +14,8 @@ import { Content } from "@jobber/components/Content";
 import { Button } from "@jobber/components/Button";
 
 # Button
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Buttons are a core user interface component, as they allow users to initiate,
 complete, and reverse actions.
