--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -7,10 +7,13 @@ showDirectoryLink: true
 
 import { useRef, useState } from "react";
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Button } from "@jobber/components/Button";
 import { ConfirmationModal } from ".";
 
 # Confirmation Modal
+
+<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
 A ConfirmationModal allows users to confirm or cancel actions that they are
 performing. Examples of actions that may need confirmation are navigating off an
