--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -6,11 +6,14 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { CivilDate } from "@std-proposal/temporal";
 import { FormatDate } from "@jobber/components/FormatDate";
 import { DescriptionList } from ".";
 
 # Description List
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Description Lists are used to display a list of terms and descriptions.
 
@@ -30,8 +33,6 @@ import { DescriptionList } from "@jobber/components/DescriptionList";
 ## Props
 
 <Props of={DescriptionList} />
-
----
 
 ## Design & Usage Guidelines
 
