--- a/packages/components/src/FormField/FormField.mdx
+++ b/packages/components/src/FormField/FormField.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { FormField } from ".";
 
 # FormField
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Master component for all things form field. The idea is to keep all the styles
 in one place.
