--- a/packages/components/src/FormatDate/FormatDate.mdx
+++ b/packages/components/src/FormatDate/FormatDate.mdx
@@ -6,11 +6,14 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { CivilDate } from "@std-proposal/temporal";
 import { FormatDate, strFormatDate } from ".";
 import { Text } from "../Text";
 
 # FormatDate
+
+<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
 In Jobber a FormatDate is used to ensure that the date is displayed in the
 expected format. No text styling is applied, this simply formats the date.
