--- a/packages/components/src/FormatEmail/FormatEmail.mdx
+++ b/packages/components/src/FormatEmail/FormatEmail.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { FormatEmail } from ".";
 
 # Format Email
+
+<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
 A component to ensure that an email address is displayed in the expected format.
 There is no styling applied, this simply just returns a semantically formatted
