--- a/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
+++ b/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
@@ -6,10 +6,13 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { CivilDateTime } from "@std-proposal/temporal";
 import { FormatRelativeDateTime } from ".";
 
 # FormatRelativeDateTime
+
+<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
 A FormatRelateDateTime displays the date and time using relative wording or
 approximate values. Note. This component only represents current date and dates
