--- a/packages/components/src/FormatTime/FormatTime.mdx
+++ b/packages/components/src/FormatTime/FormatTime.mdx
@@ -6,10 +6,13 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { CivilTime } from "@std-proposal/temporal";
 import { FormatTime } from ".";
 
 # FormatTime
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 In Jobber a FormatTime is used to ensure that time is displayed in the expected
 format. No text styling is applied, this simply formats the text.
