--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -5,9 +5,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Icon } from "./";
 
 # Icon
+
+<ComponentStatus stage="ready" responsive="yes" accessible="no" />
 
 Atlantis provides built-in icons that represent common tasks and types of
 content in a variety of use cases.
