--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { InlineLabel } from ".";
 
 # Inline Label
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Inline labels are typically used to indicate state/status on objects within the
 application.
@@ -21,7 +24,7 @@ import { InlineLabel } from "@jobber/components/InlineLabel";
   <InlineLabel>Draft</InlineLabel>
 </Playground>
 
-## Usage Guidelines
+## Design Usage & Guidelines
 
 Inline labels can be used fairly broadly, but the application of
 [color](#colors) should be handled with intent. Use of colour along with a
