--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Autocomplete } from "../Autocomplete";
 import { InputGroup } from ".";
 import { InputText } from "../InputText";
@@ -14,6 +15,8 @@ import { CivilTime } from "@std-proposal/temporal";
 import { useState } from "react";
 
 # InputGroup
+
+<ComponentStatus stage="rc" responsive="no" accessible="yes" />
 
 Use InputGroup to show a visual relationship between related input fields. If a
 number of form fields, once submitted, make up a group of content (ie. an
