--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { InputTime } from ".";
 import { Button } from "../Button";
 import { Content } from "../Content";
@@ -13,6 +14,8 @@ import { useState } from "react";
 import { CivilTime } from "@std-proposal/temporal";
 
 # InputTime
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Select a time of day. For example the time a messages should be sent or when a
 job started/ended.
