--- a/packages/components/src/Popover/Popover.mdx
+++ b/packages/components/src/Popover/Popover.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Content } from "../Content";
 import { Heading } from "../Heading";
 import { Button } from "../Button";
@@ -14,6 +15,8 @@ import { useState, useRef } from "react";
 import { Popover } from ".";
 
 # Popover
+
+<ComponentStatus stage="pre" responsive="no" accessible="no" />
 
 Write a description about what Popover component is trying to achieve.
 
