--- a/packages/components/src/ProgressBar/ProgressBar.mdx
+++ b/packages/components/src/ProgressBar/ProgressBar.mdx
@@ -6,10 +6,13 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { useState } from "react";
 import { ProgressBar } from ".";
 
 # ProgressBar
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 A progress bar is a visual indicator of how close something is to completion.
 
