--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { RadioGroup, RadioOption } from ".";
 import { Content } from "@jobber/components/Content";
 import { Text } from "@jobber/components/Text";
@@ -15,6 +16,8 @@ import { Avatar } from "@jobber/components/Avatar";
 import { useState } from "react";
 
 # Radio Group
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 RadioGroup will allow users to choose a single selection from one of a list of
 provided options.
