--- a/packages/components/src/DataDump/DataDump.mdx
+++ b/packages/components/src/DataDump/DataDump.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { DataDump } from ".";
 
 # Data Dump
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 The `DataDump` component is used when developing to nicely format data for
 debugging purposes.
