--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -6,6 +6,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { InputNumber } from ".";
 import { Text } from "../Text";
 import { useState } from "react";
@@ -13,6 +14,8 @@ import { Button } from "../Button";
 import { Content } from "../Content";
 
 # InputNumber
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Input number is used in forms that accept numbers as an answer.
 
