--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -6,10 +6,13 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { useState } from "react";
 import { InputPassword } from ".";
 
 # Input Password
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 InputPassword is used to display a secure password input field.
 
