--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Markdown } from ".";
 
 # Markdown
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Markdown component is a text-to-HTML conversion tool with a twist! Because,
 instead of using semantic HTML tags, it uses our own atlantis component for
