--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Select, Option } from ".";
 
 # Select
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 In Jobber a `Select` is used to present a defined list of options for the user
 to choose from.
