--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -6,10 +6,13 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { useState } from "react";
 import { Switch } from ".";
 
 # Switch
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 A switch toggles the state of a single setting to on or off.
 
