--- a/packages/components/src/Table/Table.mdx
+++ b/packages/components/src/Table/Table.mdx
@@ -5,6 +5,7 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import {
   Table,
   Header,
@@ -16,6 +17,8 @@ import {
 } from "./";
 
 # Table
+
+<ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
 Tables are used to organize and display tabular data to users.
 
