--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -6,9 +6,12 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Tabs, Tab } from ".";
 
 # Tabs
+
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 In Jobber tabs are used to alternate amongst related views within the same
 context.
