--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -17,7 +17,7 @@ the tighter the spacing between them should be.
 
 With in mind, let’s start small and work our way up.
 
-## Spacing guidelines
+## Design & usage guidelines
 
 ### Miniscule and Smallest
 
@@ -31,14 +31,14 @@ For example, see the spacing between an Icon and the label inside of a [Button.]
 
 ![image](https://user-images.githubusercontent.com/39704901/143130466-6754b6bc-5eb6-423c-b1a5-8ac7203f116a.png)
 
-#### Small
+### Small
 
 Sibling items within a container can be separated by the `small` value to reflect their relation 
 to each other. An example would be the spacing between [Chips in a selection group.](/components/chips#single-select)
 
 ![image](https://user-images.githubusercontent.com/39704901/143130218-5ecbd5ea-557b-494f-a949-7da93ac1f595.png)
 
-#### Base
+### Base
 
 Use `base` as the default spacing in larger content containers with multiple children of their own, 
 such as [Card.](/components/card) This should also be used as the default starting point for spacing between
@@ -46,24 +46,26 @@ such as [Card.](/components/card) This should also be used as the default starti
 
 ![image](https://user-images.githubusercontent.com/39704901/143130996-ee2e8c1b-9b3f-41a2-a417-be280f3144a4.png)
 
-#### Large
+### Large
 
 Use `large` spacing if you need a section to breathe a bit more. [Modal](/components/modal) uses `large` 
 spacing in its' header and around the edges to give itself a bit more prominence as a "standalone" view.
 
 ![image](https://user-images.githubusercontent.com/39704901/143131252-280d81e6-7c01-4960-ae83-998dd4f92096.png)
 
-#### Larger
+### Larger
 
 `Larger` doubles the value of `base` to very clearly delineate two groups of content that themselves use `base`. 
 It may be useful if you have a long list of `Cards` that need to be broken up.
 
 ![image](https://user-images.githubusercontent.com/39704901/143132579-943e8f40-82c2-44ba-950b-51b1f400ccb2.png)
 
-#### Largest and Extravagant
+### Largest and Extravagant
 
 You’ll probably never need these unless you’re doing a custom layout, but they’re here if you need ‘em.
 These values are equivalent to `48px` and `64px` respectively.
+
+---
 
 ## Implementation
 
