--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -29,14 +29,14 @@ used to provide optical adjustments where an element is visually off-centered.
 The `smaller` spacing value can be used between contents of a single component. 
 For example, see the spacing between an Icon and the label inside of a [Button.](/components/button#icons)
 
-![image](https://user-images.githubusercontent.com/39704901/143130466-6754b6bc-5eb6-423c-b1a5-8ac7203f116a.png)
+![illustration of a smaller space between icon and button label](https://user-images.githubusercontent.com/39704901/143141489-679fa61b-5497-4e81-bfe0-b5f463673e4b.png)
 
 ### Small
 
 Sibling items within a container can be separated by the `small` value to reflect their relation 
 to each other. An example would be the spacing between [Chips in a selection group.](/components/chips#single-select)
 
-![image](https://user-images.githubusercontent.com/39704901/143130218-5ecbd5ea-557b-494f-a949-7da93ac1f595.png)
+![illustration of a small space between Chip components](https://user-images.githubusercontent.com/39704901/143141613-193ceeb2-b393-44ab-a5e8-21d2f88c67c4.png)
 
 ### Base
 
@@ -44,21 +44,21 @@ Use `base` as the default spacing in larger content containers with multiple chi
 such as [Card.](/components/card) This should also be used as the default starting point for spacing between
 [Form](/components/form) elements.
 
-![image](https://user-images.githubusercontent.com/39704901/143130996-ee2e8c1b-9b3f-41a2-a417-be280f3144a4.png)
+![illustration of spacing between form elements inside of a card](https://user-images.githubusercontent.com/39704901/143141662-0f20eec4-8b27-44fe-96f5-1bf1c4d567aa.png)
 
 ### Large
 
 Use `large` spacing if you need a section to breathe a bit more. [Modal](/components/modal) uses `large` 
 spacing in its' header and around the edges to give itself a bit more prominence as a "standalone" view.
 
-![image](https://user-images.githubusercontent.com/39704901/143131252-280d81e6-7c01-4960-ae83-998dd4f92096.png)
+![illustration of the large space around a Modal's header and content](https://user-images.githubusercontent.com/39704901/143141691-159b1b4c-0b0a-4b61-97d2-15ad06526d69.png)
 
 ### Larger
 
 `Larger` doubles the value of `base` to very clearly delineate two groups of content that themselves use `base`. 
-It may be useful if you have a long list of `Cards` that need to be broken up.
+It may be useful if you have a long list of mixed content types that need to be broken up.
 
-![image](https://user-images.githubusercontent.com/39704901/143132579-943e8f40-82c2-44ba-950b-51b1f400ccb2.png)
+![illustration of larger spacing being used to break up unrelated sections of content](https://user-images.githubusercontent.com/39704901/143141846-43606573-1383-4ad2-9d95-46611488cbae.png)
 
 ### Largest and Extravagant
 
