Grammar/typo fixes

--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -12,7 +12,7 @@ principle of [proximity-based grouping:](https://www.nngroup.com/articles/gestal
 > Using varying amounts of whitespace to either unite or separate elements 
 > is key to communicating meaningful groupings.
 
-In the shortest, simplest, terms: the closer two elements are related, 
+In the shortest, simplest terms: the closer two elements are related, 
 the tighter the spacing between them should be. 
 
 With in mind, let’s start small and work our way up.
@@ -71,9 +71,9 @@ These values are equivalent to `48px` and `64px` respectively.
 
 ### Content
 
-Use the [Content component](/components/content) for any instances where you need uniform spacing beween elements.
+Use the [Content component](/components/content) for any instances where you need uniform spacing between elements.
 
-Content can set its' spacing to either `small`, `base`, or `large`; follow the guidelines above as needed.
+Content can set its spacing to either `small`, `base`, or `large`; follow the guidelines above as needed.
 
 ### Values
 
